# 78-dft-electronic-solver

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
dft_solver/: __init__.py  _dft_core_fallback.py  dos.py  hamiltonian_wrapper.py  kpoints.py  mixing.py  scf.py
examples/: example1_h2.py  example2_silicon.py  example3_charge_sloshing_benchmark.py  example4_dos_tetrahedron.py
include/dft_solver/: atoms.h  density.h  hamiltonian.h  plane_wave_basis.h  types.h
python/: bindings.cpp
src/: atoms.cpp  density.cpp  hamiltonian.cpp  plane_wave_basis.cpp
tests/: CMakeLists.txt  test_atoms.cpp  test_hamiltonian.cpp  test_plane_wave_basis.cpp
