[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.18",
    "pybind11>=2.10",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "dft-electronic-solver"
version = "0.1.0"
description = "A hardcore plane-wave DFT electronic structure solver"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[tool.cmake]
minimum_version = "3.18"
